# Rust_Connect4_With_TootAndOtto

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  index.html
backend/: Cargo.toml
backend/src/: main.rs
connect4_model/: Cargo.toml
connect4_model/src/: connect4.rs  disc.rs  main.rs
frontend/: Cargo.toml
frontend/src/: main.rs  switch.rs  types.rs
frontend/src/components/: ai_difficulty.rs  alert.rs  canvas_model.rs  connect_4_canvas.rs  drop_button.rs  mod.rs
frontend/src/pages/: connect_4_app.rs  game_history.rs  how_to_connect_4.rs  how_to_toot.rs  mod.rs  play_connect_4_with_computer.rs  play_connect_4_with_human.rs  play_toototto_with_computer.rs  play_toototto_with_human.rs  score_board.rs  text_input.rs
model/: Cargo.toml
model/src/: C4Computer.rs  ai.rs  board.rs  board_size.rs  connect4.rs  disc.rs  game.rs  lib.rs  main.rs  mod.rs  player.rs  toot_and_otto.rs
mongodb_lib/: Cargo.toml
mongodb_lib/src/: database.rs  main.rs
src/: lib.rs  main.rs  switch.rs
src/pages/: connect_4_app.rs  game_history.rs  mod.rs
www/: package.json
