[package]
name = "mongodb_lib"
version = "0.1.0"
authors = ["Ze Hui Peng <zhpeng@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "0.9.0"
bson = "0.14.0"
chrono = "0.4.11"
rocket = {version = "0.4.4", default-features = false}
rocket_contrib = "0.4.4"
rocket_cors = "0.5.1"
serde = { version = "1.0.117", features = ["derive"]}